# discord-bot-cpp

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build-macos.yml  build.yml
data/: commodities.json  currencies.json  indices.json  industries.json
src/: bot.cpp  data.cpp  visualize.cpp
src/include/: bot.h  data.h  visualize.h
